--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,7 @@
   }
   
   html {
+    padding: 30px;
     font-family: "Muller", sans-serif;
     background-color: #E5E5E5;
   }
@@ -108,6 +109,10 @@
       font-weight: 500;
   }
 
+  .nav_container {
+    margin-bottom: 70px;
+  }
+
   .nav {
       display: flex;
       justify-content: space-between;
@@ -135,3 +140,54 @@
   .btn_get-tour {
       margin-right: 30px;
   }
+
+  .offers-container {
+    display: flex;
+    min-height: 540px;
+  }
+
+  .offers-left {
+    width: 50%;
+    margin-right: 23px;
+  }
+
+  .offer-large {
+    width: 50%;
+    padding: 40px;
+    background-image: url('/img/offer-large.png');
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+
+  }
+
+  .offer-small-1 {
+    margin-bottom: 23px;
+    background-image: url('/img/offer-1.png');
+  }
+
+  .offer-small-2 {
+    background-image: url('/img/offer-2.png');
+  }
+
+  .offer-article {
+    height: 48%;
+    padding: 40px;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 15px;
+  }
+
+  .offer-article-title {
+    font-size: 40px;
+    font-weight: 700;
+    color: #fff;
+  }
+
+  .section-title {
+    margin-left: 50px;
+    font-size: 40px;
+    font-weight: 400;
+  }
+
+  
