--- a/css/style.css
+++ b/css/style.css
@@ -104,7 +104,7 @@
       color: var(--orange);
       background-image: url('/img/login.png');
       background-repeat: no-repeat;
-      background-size: contain;
+      line-height: 1;
   }
 
   .phone_link {
@@ -290,5 +290,60 @@
   padding-right: 70px;
 }
 
+.advantages-list {
+  display: flex;
+  flex-wrap: wrap;
+}
 
+.advantages-item {
+  flex: 0 1 23%;
+  padding: 40px;
+  margin-right: 30px;
+  margin-bottom: 30px;
+  border-radius: 15px;
+  background-color: #fff;
+  
+}
 
+.advantages-item:nth-child(4n) {
+  margin-right: 0;
+}
+
+.advatages-item-description {
+  margin: 0;
+  padding-top: 74px;
+  line-height: 2;
+  background-repeat: no-repeat;
+}
+
+.bathhub {
+  background-image: url('/img/bathtub.svg');
+}
+
+.hanger {
+  background-image: url('/img/hanger.svg');
+}
+
+.heating {
+  background-image: url('/img/heating.svg');
+}
+
+.hotel-key {
+  background-image: url('/img/hotel-key.svg');
+}
+
+.parking {
+  background-image: url('/img/parking.svg');
+}
+
+.reception {
+  background-image: url('/img/reception.svg');
+}
+
+.security-box {
+  background-image: url('/img/security-box.svg');
+}
+
+.swimming-pool {
+  background-image: url('/img/swimming-pool.svg');
+}
