--- a/css/style.css
+++ b/css/style.css
@@ -153,12 +153,12 @@
   }
 
   .offers-left {
-    width: 50%;
-    margin-right: 23px;
+    width: 49%;
+    margin-right: 2%;
   }
 
   .offer-large {
-    width: 50%;
+    width: 49%;
     padding: 40px;
     background: linear-gradient(90deg, rgba(48, 64, 89, 0.84) -2.9%, rgba(53, 65, 83, 0) 65.7%),
     url('/img/offer-large.png');
@@ -221,6 +221,7 @@
 
 .offer-link, .services-item-link {
   padding-right: 15px;
+  margin-right: 225px;
   color: var(--orange);
   background-image: url(/img/link.svg);
   background-repeat: no-repeat;
@@ -258,14 +259,16 @@
   flex-direction: column;
   justify-content: flex-end;
   min-height: 330px;
-  width: 48%;
+  width: 49%;
   padding: 45px;
+  margin-bottom: 23px;
   background-size: contain;
   background-repeat: no-repeat;
-  border-radius: 15px 15px 0 0;
+  border-radius: 15px;
+  background-color: #fff;
 }
 
-.services-list-item:nth-child(1n) {
+.services-list-item:nth-child(odd) {
   margin-right: 23px;
 }
 
